--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "html-to-image": "^1.11.11",
+    "react-confetti": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
