--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
     "html-to-image": "^1.11.11",
-    "react-confetti": "^6.1.0"
+    "canvas-confetti": "^1.9.3",
+    "browser-image-compression": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -64,6 +65,7 @@
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/canvas-confetti": "^1.6.4"
   }
 }
