--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,32 +1,33 @@
 {
-  "name": "BillzAI - Smart Bill Splitting",
-  "short_name": "BillzAI",
+  "name": "SplitBill AI",
+  "short_name": "SplitBill",
   "description": "Easily split bills and expenses with the power of AI. Snap a receipt and let us do the rest.",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#f2f4f7",
+  "theme_color": "#4681f4",
   "icons": [
     {
-      "src": "/icon.svg",
-      "sizes": "any",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "https://placehold.co/192x192.png",
+      "src": "https://i.postimg.cc/x1mkMHxS/image.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://placehold.co/512x512.png",
+      "src": "https://i.postimg.cc/x1mkMHxS/image.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "https://placehold.co/512x512.png",
+      "src": "https://i.postimg.cc/x1mkMHxS/image.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "https://i.postimg.cc/x1mkMHxS/image.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     }
-  ],
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#f2f4f7",
-  "theme_color": "#4681f4"
+  ]
 }
