--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "zod": "^3.24.2",
     "html-to-image": "^1.11.11",
     "canvas-confetti": "^1.9.3",
-    "browser-image-compression": "^2.0.2"
+    "browser-image-compression": "^2.0.2",
+    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
