--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -55,7 +56,8 @@
     "zod": "^3.24.2",
     "html-to-image": "^1.11.11",
     "canvas-confetti": "^1.9.3",
-    "browser-image-compression": "^2.0.2"
+    "browser-image-compression": "^2.0.2",
+    "firebase": "^10.12.3"
   },
   "devDependencies": {
     "@types/node": "^20",
