--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,27 +1,21 @@
 {
-  "name": "SplitBill AI",
-  "short_name": "SplitBill",
-  "description": "Easily split bills and expenses with the power of AI. Snap a receipt and let us do the rest.",
+  "name": "BillzAI - Smart Bill Splitting",
+  "short_name": "BillzAI",
+  "description": "Snap a receipt, split the bill. The smartest way to handle expenses with friends.",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#f2f4f7",
+  "theme_color": "#4681f4",
   "icons": [
     {
-      "src": "/android-chrome-192x192.png",
+      "src": "https://i.postimg.cc/TYXtwbKN/Chat-GPT-Image-Aug-8-2025-04-14-15-PM.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/android-chrome-512x512.png",
+      "src": "https://i.postimg.cc/TYXtwbKN/Chat-GPT-Image-Aug-8-2025-04-14-15-PM.png",
       "sizes": "512x512",
       "type": "image/png"
-    },
-    {
-        "src": "/maskable_icon.png",
-        "sizes": "512x512",
-        "type": "image/png",
-        "purpose": "maskable"
     }
-  ],
-  "theme_color": "#4681f4",
-  "background_color": "#f2f4f7",
-  "display": "standalone",
-  "start_url": "/"
+  ]
 }
